--- a/res/layout/vote_list_item.xml
+++ b/res/layout/vote_list_item.xml
@@ -4,38 +4,41 @@
     android:layout_height="match_parent"
     android:minHeight="45dp"
     android:orientation="vertical" >
-    
-    <TextView 
+
+    <TextView
         android:id="@+id/username"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_centerVertical="true"
-        android:ellipsize="marquee"
+        android:textSize="12dp"
+        android:layout_alignParentTop="true" />
+
+    <ImageView 
+        android:id="@+id/voted_for"
+        android:layout_width="32dp" 
+        android:layout_height="32dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/username"
         />
     
-    <ImageView 
-        android:layout_toRightOf="@id/username"
-        android:id="@+id/voted_for"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_centerVertical="true"
-        android:src="@android:drawable/btn_star_big_on"
-        />
-
-    <TextView android:id="@+id/index"
-        android:layout_toRightOf="@id/voted_for"
-        android:text="1"
-        android:layout_width="30dp"
+    <TextView
+        android:id="@+id/index"
+        android:layout_width="13dp"
+        android:layout_height="30dp"
+        android:textSize="14dp"
+        android:layout_below="@id/username"
+        android:layout_toRightOf="@id/voted_for"        
         android:gravity="center"
-        android:layout_centerVertical="true"
-        android:layout_height="30dp"/>
+        android:paddingRight="3dp"
+        android:text="1" />
 
-    <TextView android:id="@+id/text"
-        android:layout_toRightOf="@id/index"
+    <TextView
+        android:id="@+id/text"
+        android:layout_below="@id/username"
+        android:textSize="14dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerVertical="true"
-        android:text="Where should I go for donuts?"/>
-    
+        android:layout_toRightOf="@id/index"
+        android:text="Where should I go for donuts?" />
+
 </RelativeLayout>
