--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -6,27 +6,27 @@
     android:orientation="vertical" >
 
     <RelativeLayout
+        android:id="@+id/login_facebook"
         android:layout_width="fill_parent"
         android:layout_height="80dp"
         android:layout_weight="1"
         android:background="@drawable/login_background"
         android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/login_facebook"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@drawable/logo_facebook_text"
-            android:onClick="onFacebookLoginClick" />
+            android:src="@drawable/logo_facebook_text"
+             />
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/login_facebook"
+        android:id="@+id/login_twitter"
         android:layout_width="fill_parent"
         android:layout_height="80dp"
-        android:clickable="true"
         android:focusable="true"
+        android:clickable="true"
         android:layout_weight="1"
         android:background="@drawable/login_background_twitter" >
         <ImageView 
