--- a/res/drawable/login_background.xml
+++ b/res/drawable/login_background.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#ff5774b5" android:endColor="#ff2c4988" android:type="radial" android:gradientRadius="495.0" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_pressed="true"><shape android:shape="rectangle">
+            <gradient android:endColor="#ff5774b5" android:gradientRadius="495.0" android:startColor="#ff2c4988" android:type="radial" />
+        </shape></item>
+    <item><shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+            <gradient android:endColor="#ff2c4988" android:gradientRadius="495.0" android:startColor="#ff5774b5" android:type="radial" />
+        </shape></item>
+
+</selector>
